<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/alegreya_regular"
        android:text="@string/login_sign_in_text"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/logoImageView"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"></TextView>
    <EditText
        android:id="@+id/emailEditText"
        style="@style/EditTextStyle"
        app:layout_constraintTop_toBottomOf="@id/signInTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:hint="Email" />
    <EditText
        android:id="@+id/passwordEditText"
        style="@style/EditTextStyle"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:hint="Пароль" />

    <Button
        android:id="@+id/signInButton"
        style="@style/BtnStyle"
        android:onClick="LogIn"
        android:layout_marginTop="55dp"
        android:text="@string/login_sign_in_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/login_register_text"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@+id/signInButton"></TextView>

    <Button
        android:id="@+id/profilButton"
        style="@style/BtnStyle"
        android:layout_marginTop="25dp"
        android:text="@string/login_profil_text"
        android:onClick="ClickButtonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_login_pattern"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>